基本信息维护-资格维护

--- a/src/navigation.properties
+++ b/src/navigation.properties
@@ -249,4 +249,13 @@ navi260=\u6211\u7684\u5b66\u5206,\u5e74\u5ea6\u5b66\u5206\u6c47\u603b
 navi261=\u6211\u7684\u5b66\u5206,\u5b66\u5206\u660e\u7ec6
 navi262=\u4e2a\u4eba\u4fe1\u606f,\u4fee\u6539\u5bc6\u7801
 navi263=\u516c\u5171\u8bfe\u7a0b\u8003\u8bd5,\u516c\u5171\u8bfe\u7a0b\u5b66\u4e60
-
+navi264=\u4e2a\u4eba\u4fe1\u606f,\u57FA\u672C\u4FE1\u606F\u7EF4\u62A4
+navi265=\u4e2a\u4eba\u4fe1\u606f,\u8D44\u683C\u4FE1\u606F\u7EF4\u62A4
+navi266=\u4e2a\u4eba\u4fe1\u606f,\u6267\u4E1A\u4FE1\u606F\u7EF4\u62A4
+navi267=\u4e2a\u4eba\u4fe1\u606f,\u4E13\u4E1A\u6280\u672F\u804C\u52A1\u4FE1\u606F\u7EF4\u62A4
+navi268=\u4e2a\u4eba\u4fe1\u606f,\u884C\u653F\u804C\u52A1\u4FE1\u606F\u7EF4\u62A4
+navi269=\u4e2a\u4eba\u4fe1\u606f,\u793E\u4F1A\u5173\u7CFB\u7EF4\u62A4
+navi270=\u4e2a\u4eba\u4fe1\u606f,\u6559\u80B2\u7ECF\u5386\u7EF4\u62A4
+navi271=\u4e2a\u4eba\u4fe1\u606f,\u5DE5\u4F5C\u7ECF\u5386\u7EF4\u62A4
+navi272=\u4e2a\u4eba\u4fe1\u606f,\u515A\u6D3E\u4FE1\u606F\u7EF4\u62A4
+navi273=\u4e2a\u4eba\u4fe1\u606f,\u5BFC\u5E08\u4FE1\u606F\u7EF4\u62A4
