--- a/src/navigation.properties
+++ b/src/navigation.properties
@@ -258,4 +258,4 @@ navi269=\u4e2a\u4eba\u4fe1\u606f,\u793E\u4F1A\u5173\u7CFB\u7EF4\u62A4
 navi270=\u4e2a\u4eba\u4fe1\u606f,\u6559\u80B2\u7ECF\u5386\u7EF4\u62A4
 navi271=\u4e2a\u4eba\u4fe1\u606f,\u5DE5\u4F5C\u7ECF\u5386\u7EF4\u62A4
 navi272=\u4e2a\u4eba\u4fe1\u606f,\u515A\u6D3E\u4FE1\u606F\u7EF4\u62A4
-navi273=\u4e2a\u4eba\u4fe1\u606f,\u5BFC\u5E08\u4FE1\u606F\u7EF4\u62A4
+navi273=\u5BFC\u5E08\u4EFB\u804C\u60C5\u51B5
