--- a/src/navigation.properties
+++ b/src/navigation.properties
@@ -259,3 +259,4 @@ navi270=\u4e2a\u4eba\u4fe1\u606f,\u6559\u80B2\u7ECF\u5386\u7EF4\u62A4
 navi271=\u4e2a\u4eba\u4fe1\u606f,\u5DE5\u4F5C\u7ECF\u5386\u7EF4\u62A4
 navi272=\u4e2a\u4eba\u4fe1\u606f,\u515A\u6D3E\u4FE1\u606F\u7EF4\u62A4
 navi273=\u5BFC\u5E08\u4EFB\u804C\u60C5\u51B5
+navi274=\u4e2a\u4eba\u4fe1\u606f,\u63D0\u4EA4\u7533\u8BF7
